Create DbContext, add init migration, and update-database

--- a/src/TreeNodeDb/appsettings.json
+++ b/src/TreeNodeDb/appsettings.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Local": "Server=(localdb)\\mssqllocaldb;Database=TreeNodeDb;Trusted_Connection=True;"
   }
+
 }
